<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">5 Letters</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title">Available Games</string>
    <string name="c_and_b">Cows and Bulls</string>
    <string name="title_activity_cow">CowActivity</string>
    <string name="enter_guess">Enter a Guess</string>
    <string name="guess_hint">Enter a 5-letter word</string>
    <string name="submit">Submit</string>
    <string name="cow_text">Cows</string>
    <string name="bull_text">Bulls</string>
    <string name="cow_score">0</string>
    <string name="bull_score">0</string>
    <string name="question_mark">\?</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="blank"></string>
    <string name="previous">Previous Guesses</string>
    <string name="letters">Letters</string>
    <string name="title_activity_letters">LettersActivity</string>
    <string name="done">Done</string>
    <string name="letter_instructions">Eliminate letters you know are not in the word</string>
    <string name="title_activity_anagram">AnagramActivity</string>
    <string name="scrambled">XXXXX</string>
    <string name="scramble_hint">Guess the Scrambled Word</string>
    <string name="title_activity_dots">DotsActivity</string>
    <string name="dots">Dots</string>

</resources>