<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CowActivity" >

    <TextView
        android:id="@+id/guessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/enter_guess"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guessText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/guess_hint"
        android:inputType="text|textCapCharacters"
        android:maxLength="5" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editGuess"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:onClick="onSubmit"
        android:text="@string/submit" />

    <edu.msu.cse.parke261.words.CowView
        android:id="@+id/cowView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonSubmit"
        android:layout_marginTop="48dp" />

</RelativeLayout>